função para testar os pares

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <script>
-    getComputerChoice();
+    let  computer = getComputerChoice();
+    console.log(computer);
+    let pessoa = "scissors";
+    console.log(play(pessoa, computer));
   </script>
 </body>
 </html>
